--- a/index.html
+++ b/index.html
@@ -334,5 +334,62 @@
     <p>&copy; 2025 Stecom. Todos los derechos reservados.</p>
   </footer>
 
+  <script>
+    function navigateTo(pageId) {
+      document.querySelectorAll('.page').forEach(p => p.classList.remove('active-page'));
+      const target = document.getElementById(pageId);
+      target.classList.add('active-page');
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    }
+
+    function toggleMenu() {
+      document.getElementById("menu").classList.toggle("show");
+    }
+
+    document.getElementById("contact-form").addEventListener("submit", function(e) {
+      e.preventDefault();
+      const form = this;
+      const status = document.getElementById("form-status");
+      const loader = document.getElementById("loader");
+
+      status.innerHTML = "";
+      loader.style.display = "inline-block";
+
+      emailjs.sendForm('service_saxucfp', 'template_50cq0q1', form)
+        .then(() => {
+          loader.style.display = "none";
+          status.innerHTML = "✅ Mensaje enviado correctamente.";
+          form.reset();
+        }, (err) => {
+          loader.style.display = "none";
+          status.innerHTML = "❌ Error al enviar el mensaje. Intenta más tarde.";
+          console.error(err);
+        });
+    });
+
+    // Cerrar menú si se hace clic fuera
+    document.addEventListener("click", function (e) {
+      const menu = document.getElementById("menu");
+      const toggle = document.querySelector(".menu-toggle");
+      if (!menu.contains(e.target) && !toggle.contains(e.target)) {
+        menu.classList.remove("show");
+      }
+    });
+
+    // Cerrar menú al deslizar hacia arriba en móvil
+    let touchStartY = 0;
+
+    document.addEventListener("touchstart", function (e) {
+      touchStartY = e.changedTouches[0].clientY;
+    }, { passive: true });
+
+    document.addEventListener("touchend", function (e) {
+      const touchEndY = e.changedTouches[0].clientY;
+      if (touchStartY - touchEndY > 50) {
+        document.getElementById("menu").classList.remove("show");
+      }
+    }, { passive: true });
+  </script>
+  
 </body>
 </html>
